# nitrux-grub-theme

./: .travis.yml  CMakeLists.txt  README.md  gh-build.sh
.github/workflows/: build.yml
debian/: changelog  control  copyright  install
nomad/: CMakeLists.txt
