install(FILES dejavu_sans_mono_bold.pf2 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/grub/themes/nomad/)
install(FILES dejavu_sans_mono_book_10.pf2 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/grub/themes/nomad/)
install(FILES dejavu_sans_mono_book_12.pf2 DESTINATION ${CMAKE_INSTALL_PREFIX}/share/grub/themes/nomad/)
install(FILES grub_background.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/grub/themes/nomad/)
install(FILES highlight_c.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/grub/themes/nomad/)
install(FILES progress_bar2_c.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/grub/themes/nomad/)
install(FILES progress_bar_c.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/grub/themes/nomad/)
install(FILES progress_bar_hl_c.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/grub/themes/nomad/)
install(FILES theme.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/share/grub/themes/nomad/)


